# MIPS-esque_emulator

./: .gitignore  CMakeLists.txt  CPU.cpp  CPU.h  main.cpp
src/: CPU.cpp  main.cpp
